ababab
git-svn-id: https://jamocha.svn.sourceforge.net/svnroot/jamocha/jamocha@2156 2cd91b7d-3b21-0410-a5f4-f42db4f24360